fixed bugs on mobile

--- a/styles.css
+++ b/styles.css
@@ -68,7 +68,7 @@ body {
   background-color: grey;
 }
 
-@media (max-width: 820px) {
+@media (max-width: 1000px) {
   .hs {
     margin:  2%;
     font-size: 1rem;
